--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -3,6 +3,7 @@ $main: rgba(0,150,200,1);
 @charset "utf-8";
 @import "_normalize.scss";
 @import "_reset.scss";
+@import "_font-awesome.scss";
 @import "_fonts.scss";
 @import "_viewport.scss";
 @import "_global.scss";
