--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -145,7 +145,9 @@ body.desktop::after {
 	content: "body.mobile";
 	position: fixed;
 	bottom: 0px;
+	top: auto;
 	right: 0px;
+	left: auto;
 	background: $main;
 	padding: 15px;
 	font-size: 16px;
@@ -161,11 +163,12 @@ body.desktop::after {
 }
 
 .container {
-	padding: 10% 10% 20% 10%;
+	padding: 10%;
 }
 
 h1 {
 	line-height: 1em;
+	font-size: 2.2em
 }
 
 h1 span {
